syntax = "proto3";

option java_multiple_files = true;

package net.gichain.genergy.eam.grpc.lib;

import "google/protobuf/any.proto";

import "Request.proto";
import "Result.proto";

// 电站服务
service PlantService {
    // 获取电站上网电价
    // 使用：桂朝
    // 响应：Object<{ assetId: String, date: Date, electricityPrice: Decimal }>
    // 示例：{ assetId: "123456789", date: "2020-01-01", electricityPrice: 0.52 }
    rpc getElectricityPrice (net.gichain.genergy.eam.grpc.lib.AssetIdRequest) returns (net.gichain.genergy.eam.grpc.lib.Result) {
    }

    // 获取电站详情数据
    // 使用：马习文
    // 响应：Object<{ assetId: String, more }>
    // 示例：{ assetId: "123456789", more }
    rpc getPlantDetail (net.gichain.genergy.eam.grpc.lib.AssetIdRequest) returns (net.gichain.genergy.eam.grpc.lib.Result) {
    }
}
